home-component, login-component

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
 
 <body class="mat-typography">
   <style>
-    .hero-image{
+    /* .hero-image{
       height: 90vh;
-    }
+    } */
 
     .cardImgMain1 {
       background: url(assets/img/banner1.jpg);
